[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Devin Capriola"]
edition = "2021"
description = "Guessing Game with Cargo"
repository = "https://github.com/devincapriola/Guessing-Game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
